Issue #5: Fixed project nodes having higher z-index than overlay.

--- a/stylesheets/global/_layout.scss
+++ b/stylesheets/global/_layout.scss
@@ -57,3 +57,7 @@ header[role='banner'] {
   // This places the overlay over most elements, including the admin toolbar.
   @include z-index.get('modal');
 }
+
+.node--type-project {
+  @include z-index.get(page-main);
+}
