--- a/stylesheets/global/_node_project.scss
+++ b/stylesheets/global/_node_project.scss
@@ -79,6 +79,11 @@ $title-link-active-colour-on-dark: auto;
   'project-title-height-constraint': 30em
 ));
 
+.node--type-project {
+  // Required to contain z-index stacking contexts.
+  position: relative;
+}
+
 // .page-title needs to have higher specificity than ./_typography.scss to
 //  override margin-bottom set there.
 .page-node-type-project:not(.page-node-edit) .region-content .page-title,
